test_suite/tests/ui/fail/misplace_attribute/command_in_struct_function.rs
use clapi::macros::*;

struct MyStruct;

impl MyStruct {
    #[command]
    fn app() {}
}

fn main(){}